# pcse

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  MANIFEST.in  NPK_reference_results_A.csv  README.md  README.rst  agromanager.py  ec4.soil  events.yaml  manage.data  module1.py  pcse.pyproj  pcse.sln  pyproject.toml  requirements.txt  run_wofostnpk.py  setup.py  test_events.py
doc/: Makefile  abbreviations.rst  abbreviations.txt  available_models.rst  building_simobj.rsv  code.rst  conf.py  ec3.soil  index.rst  installing.rst  introduction.rst  lintul3_springwheat.amgt  lintul3_springwheat.site  make.bat  models_implemented.ods  myresults.txt  nl1.csv  parked_text.rsv  pcse_intro.rst  quickstart.rst  quickstart_demo2.py  reference_guide.rst  requirements.txt  structure.rst  sug0601.crop  sugarbeet_calendar.pcse  sugarbeet_results.txt  tutorial.rst  user_guide.rst  whatsnew.rst
exp/: WOFOST_GrootAndVerberne.yaml  WOFOST_PPS.yaml  WOFOST_PPS_Julius.yaml  WOFOST_PPS_Ritmo.yaml  WOFOST_PPS_Tabasco.yaml  __main__.py  experimentcollection_001.FAO_grassland.yml  experimentcollection_002.FAO_grassland.yml  process_experiment_collections.py
ggcmi/: AgCfsrNetcdfReader.py  AgmerraNetcdfReader.py  CalcTotalGdd.py  CfsrNetcdfReader.py  CropInfoReader.py  EraiNetcdfReader.py  GraspNetcdfReader.py  PrincetonNetcdfReader.py  WatchNetcdfReader.py  WfdeiNetcdfReader.py  __init__.py
main/: main.pyproj
pcse/: __init__.py  agromanagement.py  agromanager.py  base_classes.py  co2_annmean_gl.txt  config.py  cropsimulation.py  decorators.py  empty_model.py  engine.py  examples.py  (+20 more)
(+994 files in other folders)
