[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pcse"]

[project]
name = "pcse"
version = "6.0.10"
authors = [
  { name="Allard de Wit", email="allard.dewit@wur.nl" },
  { name="Herman Berghuijs", email="herman.berghuijs@wur.nl" },
]
maintainers = [
  { name="Allard de Wit", email="allard.dewit@wur.nl" },
  { name="Herman Berghuijs", email="herman.berghuijs@wur.nl" },
]
description = 'PCSE is a framework for developing and runnning crop simulation models, it includes an implementation of the WOFOST and LINTUL crop simulation models and the LINGRA grassland simulation model.'
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    'pydispatcher>=2.0.7',
   'PyYAML>=5.1',
   'openpyxl>=3.0',
   'requests>=2.0',
   'pandas>=2.0',
   'traitlets-pcse==5.0.0.dev',
   'dotmap>=1.3',
]
license = "EUPL-1.2"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ajwdewit/pcse"
documentation = "https://pcse.readthedocs.io"
repository = "https://github.com/ajwdewit/pcse.git"

